# retl

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  schema.json  test.csv  test.toml  test.xlsx  test2.csv
.github/workflows/: release.yml
src/: conditions.rs  config.rs  exports.rs  expressions.rs  lib.rs  main.rs  ops.rs  sources.rs  tests.rs  transforms.rs  types.rs  utils.rs
