[package]
edition = "2021"
name = "retl"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
calamine = "0.26.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.1"
polars = { git = "https://github.com/oatmealdealer/polars.git", branch = "json-schema-feature", features = [
    "csv",
    "lazy",
    "temporal",
    "streaming",
    "regex",
    "timezones",
    "strings",
    "serde",
    "serde-lazy",
    "decompress",
    "dtype-full",
    "array_to_struct",
    "list_to_struct",
    "extract_groups",
    "json",
    "polars-io",
    "parquet",
    "json-schema",
    "json-schema-lazy",
    "extract_jsonpath",
    "string_pad",
    "dtype-array",
] }
regex = "1.10.6"
schemars = "0.8.21"
serde = "1.0.209"
serde-tuple-vec-map = "1.0.1"
serde_json = "1.0.127"
thiserror = "2.0.11"
tokio = "1.40.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
lto = true
opt-level = 2

[lints.rust]
missing_docs = "warn"
