[package]
edition = "2021"
name = "retl"
version = "0.1.0"

[dependencies]
anyhow = "1.0.97"
calamine = "0.26.1"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
glob = "0.3.2"
polars = { git = "https://github.com/oatmealdealer/polars.git", branch = "json-schema-feature", features = [
    "csv",
    "lazy",
    "temporal",
    "streaming",
    "regex",
    "timezones",
    "strings",
    "serde",
    "serde-lazy",
    "decompress",
    "dtype-full",
    "array_to_struct",
    "list_to_struct",
    "extract_groups",
    "json",
    "polars-io",
    "parquet",
    "json-schema",
    "json-schema-lazy",
    "extract_jsonpath",
    "string_pad",
    "dtype-array",
    "range",
    "concat_str",
] }
regex = "1.11.1"
schemars = "0.8.22"
serde = "1.0.218"
serde-tuple-vec-map = "1.0.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
opt-level = 2

[lints.rust]
missing_docs = "warn"
