[package]
edition = "2021"
name = "retl"
version = "0.5.1"

[dependencies]
anyhow = "1.0.98"
calamine = "0.28.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
glob = "0.3.2"
polars = { git = "https://github.com/oatmealdealer/polars.git", branch = "dsl-schema-expose", features = [
    "csv",
    "lazy",
    "temporal",
    "regex",
    "timezones",
    "strings",
    "serde",
    "serde-lazy",
    "decompress",
    "dtype-full",
    "array_to_struct",
    "list_to_struct",
    "extract_groups",
    "json",
    "polars-io",
    "parquet",
    "extract_jsonpath",
    "string_pad",
    "dtype-array",
    "range",
    "concat_str",
    "dsl-schema",
    "polars-plan",
    "semi_anti_join"
] }
regex = "1.11.1"
schemars = "0.8.22"
serde = "1.0.219"
serde-tuple-vec-map = "1.0.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.46.1"
toml = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
opt-level = 2

[lints.rust]
missing_docs = "warn"
